--- a/glamhome/index.html
+++ b/glamhome/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Glam @ Home</title>
+    <title>Glamm @ Home</title>
 
     <link href="images/favicon.png" rel="icon" type="image/png" />
     <link href="images/favicon.png" rel="apple-touch-icon" type="image/png" />
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-2">
-                    <img id="top-logo" src="images/glam-home-logo-s.png" alt="Glam @ Home" class="img-fluid">
+                    <img id="top-logo" src="images/glam-home-logo-s.png" alt="Glamm @ Home" class="img-fluid">
                 </div>
                 <div class="col-sm-9 text-right">
                     <a href="#" class="mx-2"><i class="fa fa-phone"></i> +91 9444240000</a>
@@ -33,7 +33,7 @@
     <div class="container mt-5 pt-4">
         <div class="row">
             <div class="col-sm-3 col-6">
-                <img src="images/glam-home-logo.png" alt="Glam @ Home" class="img-fluid">
+                <img src="images/glam-home-logo.png" alt="Glamm @ Home" class="img-fluid">
             </div>
             <div class="col-sm-9 col-6">
                 <div id="Menu">
@@ -69,10 +69,10 @@
         <div id="carouselExampleFade" class="carousel  slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active ">
-                    <img src="images/slide-glam-home-1.png" alt="Glam@Home" class="img-fluid rounded" />
+                    <img src="images/slide-glam-home-1.png" alt="Glamm@Home" class="img-fluid rounded" />
                 </div>
                 <div class="carousel-item">
-                    <img src="images/slide-glam-home-2.png" alt="Glam@Home" class="img-fluid rounded" />
+                    <img src="images/slide-glam-home-2.png" alt="Glamm@Home" class="img-fluid rounded" />
                 </div>
             </div>
         </div>
@@ -81,7 +81,7 @@
     <div class="container py-3">
         <div class="row">
             <div class="col-sm-8">
-                <h1><span>Welcome to</span> Glam @ Home</h1>
+                <h1><span>Welcome to</span> Glamm @ Home</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci laboriosam omnis quo molestias
                     officiis
                     quod earum fugit suscipit cumque nesciunt? Amet, quos odit ea obcaecati harum placeat eligendi fuga
@@ -125,7 +125,7 @@
     <div class="w-100 shadow my-5 py-4"
         style="background-image: url('images/why-glam-home-bg.png'); background-size: cover; background-position: bottom;">
         <div class="container">
-            <h3 class="text-center">Why Glam@Home ?<span class="my-3">Relax... Be Pampered. Get Glammed.</span></h3>
+            <h3 class="text-center">Why Glamm@Home ?<span class="my-3">Relax... Be Pampered. Get Glammed.</span></h3>
             <p class="w-50 text-center mx-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa adipisci
                 modi
                 illo voluptate, nam nostrum.
@@ -155,7 +155,7 @@
                     </div>
                     <div class="col-sm-4 my-3 text-center">
                         <i class="fa fa-2x fa-inr text-glam mx-auto"></i>
-                        <p class="text-center">Attractive prices</p>
+                        <p class="text-center">Affordable prices</p>
                     </div>
                 </div>
             </div>
@@ -328,7 +328,7 @@
                 <a href="#" class="text-white">Privacy Policy</a>&nbsp;|&nbsp;
                 <a href="#" class="text-white">Terms &amp; Condition</a>
             </p>
-            <p class="text-white text-center">&copy; 2020 Glam @ Home. All Rights Reserved.</p>
+            <p class="text-white text-center">&copy; 2020 Glamm @ Home. All Rights Reserved.</p>
         </div>
     </footer>
 
