--- a/glammhomev2/index.html
+++ b/glammhomev2/index.html
@@ -29,12 +29,13 @@
                     <a href="#" class="mx-2"><i class="fa fa-twitter"></i></a>
                     <a href="#" class="mx-2"><i class="fa fa-instagram"></i></a>
                     <a href="#" class="mx-2 pr-4 border-right border-glam"><i class="fa fa-linkedin"></i></a>
-                    <a href="#" class="ml-2">Login</a>
+                    <a href="#" class="ml-2 border rounded p-2 border-glam d-inline-block px-3"><i
+                            class="fa fa-user mr-2"></i> Login</a>
                 </div>
             </div>
         </div>
     </header>
-    <div class="container mt-5 pt-4">
+    <div class="container mt-5 pt-5">
         <div class="row">
             <div class="col-sm-3 col-6">
                 <img src="images/glam-home-logo.png" alt="Glamm @ Home" class="img-fluid">
@@ -48,19 +49,23 @@
                         <div class="collapse navbar-collapse" id="navbarMenu">
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link active mx-3"><i class="fa fa-home"></i> Home</a>
+                                    <a href="#" class="nav-link active mx-2"><i class="fa fa-home"></i> Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link mx-3"><i class="fa fa-leaf"></i> Services</a>
+                                    <a href="#" class="nav-link mx-2"><i class="fa fa-leaf"></i> Services</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link mx-3"><i class="fa fa-gift"></i> Packages</a>
+                                    <a href="#" class="nav-link mx-2"><i class="fa fa-gift"></i> Packages</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link mx-3"><i class="fa fa-envelope"></i> Contact Us</a>
+                                    <a href="#" class="nav-link mx-2"><i class="fa fa-envelope"></i> Contact Us</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="btn btn-glam mx-3"><i class="fa fa-cart-plus"></i> Book Now</a>
+                                    <a href="#" class="nav-link mx-2"><i class="fa fa-heart"></i> Book
+                                        Now</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#" class="btn btn-glam mx-2"><i class="fa fa-cart-plus"></i> 0</a>
                                 </li>
                             </ul>
                         </div>
@@ -102,14 +107,17 @@
         </div>
     </div>
     <div class="container mt-3 mb-5 pb-5">
-        <div class="border border-glam shadow-sm rounded bg-white px-3 pb-3">
-            <h3 class="mb-4"><span>How to</span> Get Glammed at Home ?</h3>
+        <div class="shadow border px-3 py-3"
+            style="background-image: url('images/tulips-bg1.jpg'); background-size: cover; background-attachment: fixed;">
+            <h3 class="m-4"><span>How to</span> Get Glammed at Home ?</h3>
 
             <div class="row">
                 <div class="col-3">
+
                     <img src="images/get-glammed-1.png" alt="" class="img-fluid w-50 mx-auto d-block" />
                     <h6 class="text-center">1. Call/Book your services</h6>
                     <p class="small text-center">Select & Schedule your services at your convenient time</p>
+
                 </div>
                 <div class="col-3">
                     <img src="images/get-glammed-2.png" alt="" class="img-fluid w-50 mx-auto d-block" />
@@ -131,8 +139,8 @@
         </div>
     </div>
 
-    <div class="w-100 shadow my-5 py-4"
-        style="background-image: url('images/why-glam-home-bg.png'); background-attachment: fixed; background-size: contain; background-repeat: no-repeat; background-color: #ffece2;">
+    <div class="w-100 shadow my-5 py-4 bg-glam-light"
+        style="background-image: url('images/why-glam-home-bg.png'); background-attachment: fixed; background-size: contain; background-repeat: no-repeat;">
         <div class="container">
             <h3 class="text-center">Why Glamm@Home ?<span class="my-3">Relax... Be Pampered. Get Glammed.</span></h3>
             <div class="w-75 mx-auto pt-4">
