--- a/glammhomev2/index.html
+++ b/glammhomev2/index.html
@@ -83,6 +83,9 @@
                 <div class="carousel-item">
                     <img src="images/slide-glam-home-2.png" alt="Glamm@Home" class="img-fluid rounded" />
                 </div>
+                <div class="carousel-item">
+                    <img src="images/slide-glam-home-3.png" alt="Glamm@Home" class="img-fluid rounded" />
+                </div>
             </div>
         </div>
     </div>
@@ -113,11 +116,9 @@
 
             <div class="row">
                 <div class="col-3">
-
                     <img src="images/get-glammed-1.png" alt="" class="img-fluid w-50 mx-auto d-block" />
                     <h6 class="text-center">1. Call/Book your services</h6>
                     <p class="small text-center">Select & Schedule your services at your convenient time</p>
-
                 </div>
                 <div class="col-3">
                     <img src="images/get-glammed-2.png" alt="" class="img-fluid w-50 mx-auto d-block" />
@@ -368,7 +369,7 @@
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:400,600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,Berkshire&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
