--- a/glammhomev3/index.html
+++ b/glammhomev3/index.html
@@ -136,7 +136,7 @@
     </div>
     <div class="container mt-3 mb-5 pb-5">
         <div class="shadow border px-3 py-3">
-            <h3 class="m-4"><span>How to</span> Get Glammed at Home ?</h3>
+            <h3 class="m-4"><span>How do</span> We Work ?</h3>
 
             <div class="row">
                 <div class="col-3">
@@ -167,7 +167,7 @@
     <div class="w-100 shadow my-5 py-4 bg-glam-light"
         style="background-image: url('images/why-glam-home-bg.png'); background-attachment: fixed; background-size: contain; background-repeat: no-repeat;">
         <div class="container">
-            <h3 class="text-center">Why Glamm@Home ?<span class="my-3">Relax... Be Pampered. Get Glammed.</span></h3>
+            <h3 class="text-center">Why Glamm@Home ?<span class="my-3">Relax... Be Pampered... Get Glammed.</span></h3>
             <div class="w-75 mx-auto pt-4">
                 <div class="row">
                     <div class="col-sm-6 my-3">
