--- a/glammhomev3/index.html
+++ b/glammhomev3/index.html
@@ -136,7 +136,7 @@
     </div>
     <div class="container mt-3 mb-5 pb-5">
         <div class="shadow border px-3 py-3">
-            <h3 class="m-4"><span>How do</span> We Work ?</h3>
+            <h3 class="m-4"><span>How do</span> Get Glamm Service at Home ?</h3>
 
             <div class="row">
                 <div class="col-3">
