--- a/glammhomev3/index.html
+++ b/glammhomev3/index.html
@@ -82,8 +82,8 @@
             </div>
         </div>
     </div>
-    <div class="container my-5 border rounded shadow px-0">
-        <div id="glamSlide" class="carousel  slide" data-ride="carousel">
+    <div class="container my-5 px-0">
+        <div id="glamSlide" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active ">
                     <img src="images/slide-glam-home-1.png" alt="Glamm@Home" class="img-fluid rounded" />
@@ -130,32 +130,37 @@
                     committed in helping you look awesome and glowing everyday.</p>
             </div>
             <div class="col-4">
-                <img src="images/professional-home-salon-services.png" alt="" class="img-fluid">
+                <img src="images/professional-home-salon-services.png" alt=""
+                    class="img-fluid border border-glam-light rounded shadow">
             </div>
         </div>
     </div>
     <div class="container mt-3 mb-5 pb-5">
-        <div class="shadow border px-3 py-3">
+        <div class="shadow rounded bg-glam-light border px-3 py-3">
             <h3 class="m-4"><span>How to</span> Get Glamm Service at Home ?</h3>
 
-            <div class="row">
+            <div class="row pt-3">
                 <div class="col-3">
-                    <img src="images/get-glammed-1.png" alt="" class="img-fluid w-50 mx-auto d-block" />
+                    <img src="images/get-glammed-1.png" alt=""
+                        class="img-fluid rounded-circle w-75 mx-auto d-block border border-primary p-1" />
                     <h6 class="text-center">1. Call/Book your services</h6>
                     <p class="small text-center">Select & Schedule your services at your convenient time</p>
                 </div>
                 <div class="col-3">
-                    <img src="images/get-glammed-2.png" alt="" class="img-fluid w-50 mx-auto d-block" />
+                    <img src="images/get-glammed-2.png" alt=""
+                        class="img-fluid rounded-circle w-75 mx-auto d-block border border-primary p-1" />
                     <h6 class="text-center">2. Receive Confirmation</h6>
                     <p class="small text-center">Receive confirmation with the relevant details</p>
                 </div>
                 <div class="col-3">
-                    <img src="images/get-glammed-3.png" alt="" class="img-fluid w-50 mx-auto d-block" />
+                    <img src="images/get-glammed-3.png" alt=""
+                        class="img-fluid rounded-circle w-75 mx-auto d-block border border-primary p-1" />
                     <h6 class="text-center">3. Stylist comes home</h6>
                     <p class="small text-center">Trained Professional arrives at your doorstep</p>
                 </div>
                 <div class="col-3">
-                    <img src="images/get-glammed-4.png" alt="" class="img-fluid w-50 mx-auto d-block" />
+                    <img src="images/get-glammed-4.png" alt=""
+                        class="img-fluid rounded-circle w-75 mx-auto d-block border border-primary p-1" />
                     <h6 class="text-center">4. Be Glammed</h6>
                     <p class="small text-center">Relax and enjoy the services</p>
                 </div>
