--- a/glammhomev3/index.html
+++ b/glammhomev3/index.html
@@ -10,20 +10,29 @@
 
     <link href="images/favicon.png" rel="icon" type="image/png" />
     <link href="images/favicon.png" rel="apple-touch-icon" type="image/png" />
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,Berkshire&display=swap" rel="stylesheet">
+    <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
     <header class="fixed-top border-bottom px-3 bg-white shadow-sm py-2">
         <div class="container">
             <div class="row">
-                <div class="col-sm-2">
+                <div class="col-sm-2 d-none d-sm-block">
                     <img id="top-logo" src="images/glam-home-logo-s.png" alt="Glamm @ Home" class="img-fluid">
                 </div>
                 <div class="col-sm-10 text-right">
-                    <span class="mr-2 pr-4 border-right border-glam"><i class="fa fa-clock-o"></i> Working Hours: 9 AM -
+                    <span class="mr-2 pr-4 border-right border-glam"><i class="fa fa-clock-o"></i>
+                        Working Hours: 9 AM -
                         7 PM</span>
                     <a href="#" class="mx-2 pr-4 border-right border-glam"><i class="fa fa-phone"></i> +91
                         9444240000</a>
+                    <br class="d-block d-sm-none" />
                     <a href="#" class="mx-2"><i class="fa fa-whatsapp"></i></a>
                     <a href="#" class="mx-2"><i class="fa fa-facebook-official"></i></a>
                     <a href="#" class="mx-2"><i class="fa fa-twitter"></i></a>
@@ -440,13 +449,6 @@
             <p class="text-white text-center">&copy; 2020 Glamm @ Home. All Rights Reserved.</p>
         </div>
     </footer>
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,Berkshire&display=swap" rel="stylesheet">
-    <link href="style.css" rel="stylesheet" type="text/css" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
